--- a/dz_3/Vagrantfile
+++ b/dz_3/Vagrantfile
@@ -33,7 +33,7 @@ Vagrant.configure("2") do |config|
 	vb.gui = false
   end
   subconfig.vm.provision "file", source: "./nginx", destination: "/tmp/nginx"
-  subconfig.vm.provision "shell", inline: "mv /tmp/nginx /etc/apparmor.d/nginx"
+  subconfig.vm.provision "shell", inline: "mv /tmp/nginx /etc/apparmor.d/usr.sbin.nginx"
   subconfig.vm.provision :shell, path: "ubuntu-prov.sh"
  end
 
