part 2 error handling

--- a/part2/provisioning/files/ns01/named.conf
+++ b/part2/provisioning/files/ns01/named.conf
@@ -74,7 +74,7 @@ view "view1" {
     zone "dns.lab" {
         type master;
         allow-transfer { key "zonetransfer.key"; };
-        file "/etc/named/named.dns.lab.view1";
+        file "/var/named/named.dns.lab.view1";
     };
 
     // labs ddns zone
@@ -82,7 +82,7 @@ view "view1" {
         type master;
         allow-transfer { key "zonetransfer.key"; };
         allow-update { key "zonetransfer.key"; };
-        file "/etc/named/dynamic/named.ddns.lab.view1";
+        file "/var/named/dynamic/named.ddns.lab.view1";
     };
 
     // labs newdns zone
